--- a/monitoring/compose.yaml
+++ b/monitoring/compose.yaml
@@ -6,7 +6,7 @@ services:
     command: ["sonarr"]
     environment:
       PORT: 9707
-      URL: "http://192.168.50.102:8989"
+      URL: "http://${DOCKER_HOST}:8989"
       APIKEY: ${SONARR_API_KEY}
       ENABLE_ADDITIONAL_METRICS: true
     ports:
@@ -18,7 +18,7 @@ services:
     command: ["radarr"]
     environment:
       PORT: 9708
-      URL: "http://192.168.50.102:7878"
+      URL: "http://${DOCKER_HOST}:7878"
       APIKEY: ${RADARR_API_KEY}
     ports:
       - "9708:9708"
@@ -29,7 +29,7 @@ services:
     command: ["lidarr"]
     environment:
       PORT: 9709
-      URL: "http://192.168.50.102:8686"
+      URL: "http://${DOCKER_HOST}:8686"
       APIKEY: ${LIDARR_API_KEY}
     ports:
       - "9709:9709"
@@ -40,7 +40,7 @@ services:
     command: ["prowlarr"]
     environment:
       PORT: 9710
-      URL: "http://192.168.50.102:9696"
+      URL: "http://${DOCKER_HOST}:9696"
       APIKEY: ${PROWLARR_API_KEY}
     ports:
      - "9710:9710"
@@ -51,7 +51,7 @@ services:
     command: ["readarr"]
     environment:
       PORT: 9711
-      URL: "http://192.168.50.102:8787"
+      URL: "http://${DOCKER_HOST}:8787"
       APIKEY: ${READARR_API_KEY}
     ports:
       - "9711:9711"
@@ -61,7 +61,7 @@ services:
     container_name: deluge-exporter
     environment:
       TZ: Etc/UTC
-      DELUGE_URL: http://192.168.50.102:8112
+      DELUGE_URL: http://${DOCKER_HOST}:8112
       DELUGE_PASSWORD: ${DELUGE_PASS}
       LOG_LEVEL: INFO
     ports:
@@ -72,7 +72,7 @@ services:
     container_name: pihole-exporter
     environment:
       PIHOLE_PROTOCOL: https
-      PIHOLE_HOSTNAME: pihole.frugalbotanists.com
+      PIHOLE_HOSTNAME: ${PIHOLE_HOSTNAME}
       PIHOLE_PASSWORD: ${PIHOLE_PASS}
       PIHOLE_PORT: 443
       PORT: 9617
