--- a/diun/compose.yaml
+++ b/diun/compose.yaml
@@ -9,9 +9,9 @@ services:
       - "./diun.yml:/diun.yml:ro"
       - "/var/run/docker.sock:/var/run/docker.sock"
     environment:
-      - "TZ=Etc/UTC"
-      - "LOG_LEVEL=info"
-      - "LOG_JSON=false"
+      TZ: Etc/UTC
+      LOG_LEVEL: info
+      LOG_JSON: false
     restart: always
 
 networks:
